Fixed table using overflow

--- a/css/styled.css
+++ b/css/styled.css
@@ -99,7 +99,7 @@ h1{
 }
 .content{
   border: 15px ;
-  padding: 50px;
+  padding: 30px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.50);
   background-color: white;
   border-radius: 15px;
@@ -109,7 +109,10 @@ h1{
   color: rgb(5, 110, 100);
   font-size: 20px;
   flex-wrap: wrap;
-  align-items: left;
+  text-align: left;
+}
+.content .tb{
+  overflow-x:auto;
 }
 h3{
   color: rgb(253, 105, 130);
@@ -129,9 +132,6 @@ button{
 }
 table{
   width:100%;
-}
-@media screen and (max-width:600px){
-  table{table-layout:fixed;}
 }
 
 td{
